# Employee_Task

./: .coverage  .dockerignore  .flake8  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
config/: settings.py  urls.py
employees/: models.py  serializers.py  tests.py  urls.py  views.py
employees/fixtures/: employee.json
employees/migrations/: 0001_initial.py
tasks/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
tasks/fixtures/: task.json
tasks/migrations/: 0001_initial.py
